Remocao do uso de Objects disponivel a partir do Java 7